--- a/index.html
+++ b/index.html
@@ -57,5 +57,51 @@
         </div>
       </div>
     </div>
+
+      <!-- footer -->
+
+      <div class="Mainfooter">
+          <!-- <h4>AirPods Gen3</h4>
+          <p>Copyright &copy; 2023 - Designed by Terry </p> -->
+
+          <div class="footer1">
+            <h3>Belanja dan Belajar</h3>
+            <a href="">Mac</a>
+            <a href="">iPad</a>
+            <a href="">iPhone</a>
+            <a href="">Watch</a>
+          </div>
+
+          <div class="footer2">
+            <h3>Akun</h3>
+            <a href="">Kelola ID Apple Anda</a>
+            <a href="">iCloud.com</a>
+            <a href="">link</a>
+            <a href="">link</a>
+          </div>
+
+          <div class="footer3">
+            <h3>Untuk Bisnis</h3>
+            <a href="">Apple dan Bisnis</a>
+            <a href="">link</a>
+            <a href="">link</a>
+            <a href="">link</a>
+          </div>
+
+          <div class="footer4">
+            <h3>Nilai-Nilai Apple</h3>
+            <a href="">Aksesibilitas</a>
+            <a href="">Pendidikan</a>
+            <a href="">Lingkungan</a>
+            <a href="">Privasi</a>
+          </div>
+          <div class="footer5">
+            <h3>Tentang Apple</h3>
+            <a href="">Investor</a>
+            <a href="">Etika & Kepatuhan</a>
+            <a href="">Acara</a>
+            <a href="">Hubungi Apple</a>
+          </div>
+      </div>
   </body>
 </html>
